<resources>
    <string name="appName">CClouds</string>
    <string name="appAbout">About</string>
    <string name="appContactSynch">Synchronization</string>
    <string name="appRegister">Register</string>
    <string name="appPreferences">Preferences</string>
    <string name="userPhoneNumber">Phone</string>
    <string name="userPassword">Password</string>
    <string name="userPasswordConfirm">Confirm</string>
    <string name="userEmail">Email</string>
    <string name="userName">Username</string>
    <string name="rememberPssword">Remember password</string>
    <string name="startBackup">START BACKUP</string>
    <string name="startSession">Log in</string>
    <string name="userRegister">Register on cclouds</string>
    <string name="doRegister">REGISTER</string>
    <string name="descPrefRememberPass">Don\'t type you password again, we take care of it</string>
    <string name="descPreferSDCard">Data will be stored at SD Card if available</string>
    <string name="preferSDCard">SD Card preferred</string>
    <string name="advanced">Advanced</string>
    <string name="serverAddress">Server address</string>
    <string name="descPrefUseCache">Use local data until the updated one comes from our servers</string>
    <string name="useCache">Use local cache</string>
    <string name="firstName">FirstName</string>
    <string name="lastName">LastName</string>
    <string name="phoneNumber">PhoneNumber</string>
    <string name="contactsSearch">Search contacts</string>
    <string name="contactsSynchronize">Sync contacts</string>
    <string name="doGetAllUsers">Get all users</string>
    <string name="errPassTooShort">Password is too short</string>
    <string name="errPassDoNotMatch">Passwords do not match</string>
    <string name="errRequiredField">Required field</string>
    <string name="unexpectedError">An unexpected error has occurred. Please, contact the System Administrator.</string>
    <string name="noUserDataWasSynchronized">There isn\'t user data to sync</string>
    <string name="contactsSynchronization">Contact sync</string>
    <string name="userSynchronization">User sync</string>
    <string name="OK">OK</string>
    <string name="CANCEL">Cancel</string>
    <string name="OPTIONS">OPTIONS</string>
    <string name="acceptTermsAndConditions">Accept the terms.</string>
    <string name="acceptTermsAndConditionsOK">I agree with the terms.</string>
    <string name="termsAndConditionsAgreements">Agreements</string>
    <string name="exportContacts">Export Contacts</string>
    <string name="importContacts">Import Contacts</string>
    <string name="sendSMS">Send SMS</string>
    <string name="sendEmail">Send Email</string>
    <string name="sendEmailAddres">SEND</string>
    <string name="userProfile">User Profile</string>
    <string name="mainOptions">Main Options</string>
    <string name="notImplemented">Function not implemented.</string>
    <string name="Agreements">
        <strong>Cclouds</strong>
        allows you to have an updated backup of your contacts on the server.
        <br>Once you accept the terms and conditions, your contacts will be saved automatically.</br>
    </string>
    <string name="unable_to_start">Unable to start</string>
    <string name="try_again">Try again</string>
    <string name="log_in">Log in</string>
    <string name="user_exists">There is already a user with your phone number</string>
    <string name="unable_to_start_activity">Sorry, I wasn\'t able to start %s settings activity</string>
    <string name="sync_coming_soon">Sync will be done soon.</string>
    <string name="YES">Yes</string>
    <string name="NO">No</string>
    <string name="wanna_provide_email">You have successfully signed up. Now, you should provide and email so we can send
        you your account details.
    </string>
    <string name="remind_me_later">Remind me later</string>
    <string name="invalid_email">You should input a valid email address.</string>
    <string name="email_registered">Email registered.</string>
    <string name="error_submitting_email_address">There\'s been an error while trying to submit your email address. Try
        again later.
    </string>
    <string name="error_email_exists">The email you entered is already in the database. Use another email.</string>
    <string name="db_in_use">Updating contacts. Try later</string>
    <string name="user_selection">You must select at least one contact.</string>
    <string name="send_email_using">Send email using.</string>
    <string name="no_email_client_installed">No email client installed.</string>
    <string name="constacts_no_has_email_address">No email were found.</string>
    <string name="user_information">INFORMATION</string>
    <string name="profile_information">PROFILE INFORMATION</string>
    <string name="version_information">VERSION</string>
    <string name="application">Application</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="dev1">Reinier Leyva Avila</string>
    <string name="dev2">Isidro Rodriguez Gamez</string>
    <string name="developers">Developers</string>
    <string name="cclouds_email">ccloudsaywa@gmail.com</string>
    <string name="contact_us">CONTACT US</string>
    <string name="preferences">Preferences</string>
    <string name="login_information">LOGIN INFORMATION</string>
    <string name="email_address">Email Address</string>
    <string name="user_address">ADDRESS</string>
    <string name="parroquia">Parroquia</string>
    <string name="userSynchronizationInformation">User data will be sync from the webservice.</string>
    <string name="userSynchronizationInformationFirstTime">This is the first time you run cclouds. Your contact data
        will be synced from your phone to our servers.
    </string>
    <string name="network_is_not_connected">Network is not connected</string>
    <string name="network_is_not_connected_pls_check_it">Please check your network and try again</string>
    <string name="profile_updated">User profile successfully updated.</string>
    <string name="profile_no_updated">Could not update the user profile.</string>
    <string name="done">DONE</string>
    <string name="sex">sex</string>
    <string name="synchOptionsTitle">Sync options</string>
    <string name="contactsBackupOnServer">There are contacts only in the server.Would you like to copy them to this
        device?
    </string>
    <string name="contactsBackupOnBoth">There are contacts in both the server and this device.</string>
    <string name="contactsBackupHasBeenSynced">Contacts have been synced.</string>
    <string name="contactsBackupHasBeenDone">Contacts backup have been done.</string>
    <string name="contactsSynced">Contacts are synced</string>
    <string name="operationComplete">The task has been completed.</string>
    <string name="operationWorking">The task you chose is running.</string>
    <string name="contactsChanged">Sync will be done as soon as possible</string>
    <string name="contactsWasModified">There are changes in your contacts that haven\'t been backed up on the server.
    </string>
    <string name="initContactsBackup">Restore Contacts</string>
    <string name="email_body">I installed <strong>cclouds</strong> application and is very good to keep my contacts synchronized. Download it !!!  </string>
    <string name="sms_body">My contacts are now supported with cclouds. Download it !!!  </string>
    <string name="loginActProcess">Login in progress &#8230;</string>
    <string name="registerActProcess">Register in progress &#8230;</string>
    <string name="synchActProcess">In progress &#8230;</string>
    <string name="syncingNow">Syncing now.</string>
    <string name="errWrongUserAndPass">Wrong User or Password</string>
    <string name="errInetConnection">Error, please check internet connection.</string>
    <string name="errCreatingUser">Error, creating new user in the data base.</string>
    <string name="errNoPhoneNumber">Error, no phone number.</string>
    <string name="thereHasBeenAnError">Something went wrong.</string>
    <string-array name="contactsSynchronizationByValues">
        <item>Replace device contacts</item>
        <item>Replace server contacts</item>
        <item>Merge contacts</item>
    </string-array>
    <string-array name="contactsSynchronizationByOptions">
        <item>Replace contacts Device from DB</item>
        <item>Replace contacts DB from Device</item>
        <item>Merge contacts</item>
    </string-array>
    <string name="open_settings">Open settings</string>
    <string-array name="networkOptions">
        <item>Wifi</item>
        <item>Mobile data</item>
    </string-array>
    <string-array name="contactsBackupsByOptions">
        <item>Backups contacts</item>
        <item>Restore contacts</item>
    </string-array>
    <string-array name="sex_array">
        <item>M</item>
        <item>F</item>
    </string-array>
</resources>