<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/usuarioSearch"
            android:actionViewClass="android.widget.SearchView"
            android:icon="@android:drawable/ic_menu_search"
            android:showAsAction="ifRoom|collapseActionView"
            android:title="@string/contactsSearch"/>
    <!--<item
            android:id="@+id/contactSynchronize"
            android:icon="@drawable/ic_menu_refresh"
            android:showAsAction="always"
            android:title="@string/contactsSynchronize"
            android:visible="false"/>-->

    <item
            android:id="@+id/mainOptions"
            android:icon="@android:drawable/ic_menu_preferences"
            android:showAsAction="always"
            android:title="@string/mainOptions">
        <menu>
            <group
                    android:id="@+id/usuarioSettings"
                    >
                <item
                        android:id="@+id/getAllUsers"
                        android:title="@string/doGetAllUsers"
                        />
                <item
                        android:id="@+id/exportContacts"
                        android:title="@string/exportContacts"
                        />
                <item
                        android:id="@+id/importContacts"
                        android:title="@string/importContacts"
                        />
                <item
                        android:id="@+id/sendSms"
                        android:title="@string/sendSMS"
                        />
                <item
                        android:id="@+id/sendEmail"
                        android:title="@string/sendEmail"
                        />
            </group>
        </menu>
    </item>
</menu>