<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@android:color/white" >

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/termsAndConditionsAgreements"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewTitle"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/Agreements"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/acceptTermsAndConditionsOK" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox1"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/buttonCancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"
            android:text="@string/CANCEL" />

        <Button
            android:id="@+id/buttonAccept"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:enabled="false"
            android:layout_weight="0.5"
            android:text="@string/OK" />
    </LinearLayout>

</RelativeLayout>