<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@android:color/white"
              android:orientation="vertical">
    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blue_100"
                    android:padding="15dp"
                    android:paddingTop="20dp"
                    android:text="@string/version_information"
                    android:textSize="16sp"/>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/application"
                        android:textSize="16sp"/>

                <TextView
                        android:id="@+id/menu_item_sobre_lbl_version"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:textSize="16sp"/>
            </LinearLayout>

            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@color/CINZA"/>

            <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.9"
                        android:text="@string/developers"
                        android:textSize="16sp"/>


                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="0.1">

                    <TextView
                            android:id="@+id/dev1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@string/dev1"
                            android:textSize="16sp"/>


                    <TextView
                            android:id="@+id/dev2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:paddingTop="10dp"
                            android:text="@string/dev2"
                            android:textSize="16sp"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/blue_100"
                    android:padding="15dp"
                    android:paddingTop="20dp"
                    android:text="@string/contact_us"
                    android:textSize="16sp"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_weight="0.9"
                        android:layout_height="wrap_content"
                        android:text="@string/cclouds_email"
                        android:textColor="@color/blue"
                        android:textSize="12sp"
                        android:id="@+id/email_cclouds"
                        android:layout_gravity="center"
                        android:background="@drawable/button_selector"

                />

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="0.1"
                        android:gravity="center">
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/google_plus"
                            android:background="@drawable/button_selector"
                            android:id="@+id/google_plus"
                           />
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/facebook"
                            android:background="@drawable/button_selector"
                            android:id="@+id/facebook"
                            />
                    <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/twitter"
                            android:background="@drawable/button_selector"
                            android:id="@+id/twitter"
                          />
                </LinearLayout>


            </LinearLayout>
            <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@color/CINZA"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>